Forgot to commit

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SIMPLE ⊕ SIMON</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <div class="container">
-    <h1 class="main-title">Simple <span class="ss-symbol">⊕</span> Simon</h1>
     <div class="button-container">
         <div class="button button-green" id="green"></div>
         <div class="button button-red" id="red"></div>
         <div class="button button-blue" id="blue"></div>
         <div class="button button-yellow" id="yellow"></div>
         <div class="center-area">
-            <p class="title">.</p>
+            <p class="title">simon</p>
+            <div class="score-screen"><span id="ticker"></span></div>
+            <button class="start-btn" id="start">START</button>
         </div>
     </div>
 </div>
